# Cirilla---a-LLM-made-on-a-budget

./: .gitmodules  Ollama_create_instruct.py  README.md  example.jsonl  fandom_scraper.py  index.html  pyproject.toml  rm_duplicate_instruct.py
BERT/: README.md
Cirilla_model/: README.md  ascichart_demo.py  bert_model.py  dataloader.py  hf_demo.py  in_embeddings.py  model.py  modules.py  pretraining_data.py  tokenizer_modules.py  training.py
DPO/: README.md
FlexAttention/: README.md
KAN/: README.md
LLM_pieces/: BERT_attention.py  README.md  RoPE.py  SMoE.py  __init__.py  sliding_window_attention.py
LLama_decoder_only_architecture/: README.md
Radovid/: hf_demo.py
Radovid_model/: README.md  dataloader.py  hf_demo.py  hf_hub.py  model.py  modules.py  pretraining_data.py  tokenizer_modules.py  training.py
Synth_data/: Ollama_create_instruct.py  Ollama_curate.py  __init__.py  fandom_create_instruct.py  fandom_scraper.py  hirearchival_dynamic_summary.py  multi_turn_ollama.py  multi_turn_ollama_vllm.py  multi_turn_vllm.py  ollama_summarizer.py  reason_gym_synthetic.py  rm_duplicate_instruct.py  single_pass_summary_vllm.py  summaries_gather.py  witcher_instruct_gather.py  witcher_multiround_gather.py
Tiny_recursive_model/: README.md
Transformer_from_scratch/: LongNet.py  README.md  dataset.py  model.py  modules.py  train.py
cirilla_training/: domain_training.py  grpo_icl_training.py  grpo_training.py  infrence.py  mid_training.py  pre_training.py  train.py
examples/: MagMaxMaml_binary_class.py  cirilla_hybrid.py  maml_binary_adapter.py  protonet_binary.py  reptile_binary_class.py  setfit_binary.py  test_bert.py  test_ciri.py  test_ciri_dmoe_load_balance.py  test_ciri_load_balance.py  test_ciri_moe.py  test_ciri_moe_sparse_load_balance.py  test_ciri_sparse_load_balance.py  test_mtp.py  test_trm.py  train_bert.py
synth_data/: README.md
tests/: test_llm_pieces_smoe.py
witcher_fandom/: A Deadly Plot.txt  A Grain of Truth.txt  A Knight's Tales.txt  A Little Sacrifice.txt  A Matter of Life and Death (The Witcher 3).txt  A Midnight Clear.txt  A Night to Remember.txt  Aard.txt  Adda the White.txt  Aelirenn.txt  Aen Elle.txt  Aerondight.txt  Aether.txt  Alchemy.txt  Alghoul.txt  (+565 more)
(+7212 files in other folders)
