[project]
name = "radovid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attn-gym>=0.0.4",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "fandom-py>=0.2.1",
    "fuzzywuzzy>=0.18.0",
    "huggingface-hub>=0.33.4",
    "kernels>=0.8.0",
    "megablocks[all]>=0.10.0",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "python-levenshtein>=0.27.1",
    "reasoning-gym>=0.1.23",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.2",
    "torch>=2.7.0",
    "torchao>=0.12.0",
    "torchvision>=0.22.0",
    "transformers>=4.53.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
packages = ["LLM_pieces", "Radovid_model", "attention-gym.attn_gym"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
